# rbank

./: readme.md
cli_client/: Cargo.toml
cli_client/src/: client.rs  error.rs  main.rs  models.rs
web_api/: Cargo.toml
web_api/src/: account_repo.rs  auth.rs  main.rs  middleware.rs  view_models.rs
