[package]
name = "cli_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
strum = "0.25.0"
strum_macros = "0.25.3"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
